fix table layout bug
Type: BF
Jira: HALO-774

--- a/client/components/main/style/index.less
+++ b/client/components/main/style/index.less
@@ -13,6 +13,7 @@
   flex-direction: column;
   flex: 1;
   padding: 0 20px;
+  overflow: hidden;
 
   > .header {
     flex: 1;
